[package]
name = "tokio-serial"
version = "4.3.3"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for tokio"
license = "MIT"
homepage = "https://github.com/berkowski/tokio-serial"
repository = "https://github.com/berkowski/tokio-serial"
documentation = "http://docs.rs/tokio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/tokio-serial", service = "github" }
travis-ci = { repository = "berkowski/tokio-serial", service = "github" }

[features]
default = ["libudev"]
libudev = ["mio-serial/libudev"]

[dependencies]
futures = "0.3"
mio-serial = { git = "https://github.com/patricke94/mio-serial", branch = "master", default-features = false }
tokio = { version = "1.1", features = ["io-util", "net"], default-features = false }

[dev-dependencies]
futures = "0.3.1"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread"], default-features = false }
tokio-util = { version = "0.6", features = ["codec"], default-features = false }
bytes = "1.0"
